# CNC-Surface-Fitting

./: LICENSE  README.md  pyproject.toml
src/cnc_surface_fit/: app.py  gcode.py  surface.py
src/examples/: star.gcode  surface_map.txt
