[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"


[project]
name = "cnc-surface-fit"
version = "0.1.0"
description = "PyQt app for CNC surface fitting & G-code Z correction"
authors = [{ name = "Faranak Rezaie", email = "faranak.rezaie81@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
"numpy",
"scipy",
"matplotlib",
"pyqt5",
]


[project.scripts]
cnc-surface-fit = "cnc_surface_fit.app:main"